--- a/CardioHealth/Onboarding/APHOnboarding.storyboard
+++ b/CardioHealth/Onboarding/APHOnboarding.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -177,7 +177,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="225" id="3sK-Qo-iMw">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="233" id="3sK-Qo-iMw">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3sK-Qo-iMw" id="BBW-e9-qzC">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -190,39 +190,39 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Can you read and understand English in order to provide informed consent and follow the instructions?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="grf-sL-dg7">
-                                                    <rect key="frame" x="15" y="8" width="290" height="55"/>
+                                                    <rect key="frame" x="15" y="8" width="290" height="63"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="55" id="kux-yR-VcC"/>
+                                                        <constraint firstAttribute="height" constant="63" id="kux-yR-VcC"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d73-Bu-wiK">
-                                                    <rect key="frame" x="160" y="73" width="1" height="130"/>
+                                                    <rect key="frame" x="160" y="81" width="1" height="130"/>
                                                     <color key="backgroundColor" white="0.80000000000000004" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="130" id="eCY-4H-9oy"/>
                                                         <constraint firstAttribute="width" constant="1" id="g0a-fR-879"/>
                                                     </constraints>
                                                 </view>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="asN-OX-vsv">
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="asN-OX-vsv">
                                                     <rect key="frame" x="15" y="73" width="132" height="118"/>
                                                     <state key="normal" title="Yes"/>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJn-oS-cnr">
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJn-oS-cnr">
                                                     <rect key="frame" x="175" y="73" width="130" height="118"/>
                                                     <state key="normal" title="No"/>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSE-aD-RtE">
-                                                    <rect key="frame" x="0.0" y="214" width="320" height="1"/>
+                                                    <rect key="frame" x="0.0" y="222" width="320" height="1"/>
                                                     <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="jhd-A6-rnw"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NLc-QN-s0Q">
-                                                    <rect key="frame" x="0.0" y="215" width="320" height="10"/>
+                                                    <rect key="frame" x="0.0" y="223" width="320" height="10"/>
                                                     <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="10" id="IzE-dV-uAr"/>
@@ -233,13 +233,13 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="asN-OX-vsv" secondAttribute="bottom" constant="26" id="30O-28-Qel"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="aSE-aD-RtE" secondAttribute="bottom" constant="2" id="5NX-6w-3I2"/>
                                                 <constraint firstItem="AgX-IL-rgI" firstAttribute="top" secondItem="BBW-e9-qzC" secondAttribute="topMargin" constant="-8" id="Alw-Zq-5eZ"/>
-                                                <constraint firstItem="asN-OX-vsv" firstAttribute="top" secondItem="grf-sL-dg7" secondAttribute="bottom" constant="10" id="Brh-rx-POQ"/>
+                                                <constraint firstItem="asN-OX-vsv" firstAttribute="top" secondItem="grf-sL-dg7" secondAttribute="bottom" constant="2" id="Brh-rx-POQ"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="NLc-QN-s0Q" secondAttribute="bottom" constant="-8" id="Dt0-DX-gEP"/>
                                                 <constraint firstItem="jJn-oS-cnr" firstAttribute="leading" secondItem="d73-Bu-wiK" secondAttribute="trailing" constant="14" id="E1T-w3-leH"/>
                                                 <constraint firstAttribute="centerX" secondItem="d73-Bu-wiK" secondAttribute="centerX" constant="-0.5" id="Mjw-aj-OHB"/>
                                                 <constraint firstItem="grf-sL-dg7" firstAttribute="leading" secondItem="BBW-e9-qzC" secondAttribute="leadingMargin" constant="7" id="VSH-Em-EpY"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="jJn-oS-cnr" secondAttribute="trailing" constant="7" id="dob-Xz-sYM"/>
-                                                <constraint firstItem="jJn-oS-cnr" firstAttribute="top" secondItem="grf-sL-dg7" secondAttribute="bottom" constant="10" id="eBq-RE-AeU"/>
+                                                <constraint firstItem="jJn-oS-cnr" firstAttribute="top" secondItem="grf-sL-dg7" secondAttribute="bottom" constant="2" id="eBq-RE-AeU"/>
                                                 <constraint firstItem="d73-Bu-wiK" firstAttribute="leading" secondItem="asN-OX-vsv" secondAttribute="trailing" constant="13" id="hx3-bB-F8V"/>
                                                 <constraint firstItem="AgX-IL-rgI" firstAttribute="leading" secondItem="BBW-e9-qzC" secondAttribute="leadingMargin" constant="-8" id="jff-IN-NiC"/>
                                                 <constraint firstItem="grf-sL-dg7" firstAttribute="top" secondItem="BBW-e9-qzC" secondAttribute="topMargin" id="n1F-xL-hh2"/>
